<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright 2017 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<resources>
    <string name="app_name">Storage Samples</string>
    <string name="project_name">android-storage-samples</string>

    <string name="app_01">aodViewer</string>
    <string name="app_name_with_index">aodViewer (%1$d/%2$d)</string>
    <string name="open_file">Open…</string>
    <string name="info">Info</string>
    <string name="open_file_button">Open File</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="intro_message">This sample demonstrates how to use PdfRenderer to display PDF documents on the screen.</string>
    <string name="open_call_to_action">Click "open" to view the contents of a PDF.</string>

    <string name="app_02">ktFiles</string>
    <string name="rename_title">Rename</string>
    <string name="rename_okay">Rename</string>
    <string name="rename_cancel">Cancel</string>

    <string name="error_no_activity">No activity found to open "%1$s".</string>

    <string name="app_03">ContentProvider Paging sample</string>
    <string name="root_summary">The root directory of the documents</string>

    <string name="fetched_images_out_of">Fetched from %1$d to %2$d images out of %3$d in total.</string>
    <string name="image_cat_content_description">A cat image</string>
    <string name="show_images">Show images</string>

    <string name="app_05">File Manager</string>
    <string name="go_parent_label">"⬆️ Parent folder"</string>
    <string name="folder_item">🗂 %1$s</string>
    <string name="file_item">📄 %1$s</string>
    <string name="permission_rationale_message">We need your permission to access your files\n and display them to you</string>
    <string name="permission_request_label">Give permission</string>
    <string name="legacy_external_storage_warning_message">You need to enable the <b>requestLegacyExternalStorage</b>\n flag in the AndroidManifest.xml file</string>
    <string name="settings_title">File Manager settings</string>
    <string name="file_manager_title">File Manager sample</string>
    <string name="sdk_codename_info">SDK codename: %1$s</string>
    <string name="sdk_version_info">SDK version: %1$s</string>
    <string name="legacy_storage_info">Legacy External Storage: %1$s</string>
    <string name="permission_used_info">Permission used: %1$s</string>
    <string name="permission_granted_info">Permission granted: %1$s</string>
    <string name="open_settings_button_label">Open settings</string>
    <string name="request_permission_button_label">Request permission</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_06">Gray Gallery</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_gallery">Gallery</string>

    <string name="app_07">MediaStore</string>

    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="permission_not_granted">App requires access to storage to access items stored in MediaStore.</string>

    <string name="delete_dialog_title">Delete?</string>
    <string name="delete_dialog_message">Delete %1$s?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>

    <string name="app_08">SAF Demos</string>
    <string name="image_picker_title">Select an image</string>
    <string name="image_picker_action_description">Pick an image</string>

    <string name="image_picker_demo_title">Image Picker</string>
    <string name="image_picker_demo_text">
        Demo of using ACTION_GET_CONTENT to allow a user to pick an image, for example, for a
        profile picture.
    </string>

    <string name="app_09">Scoped Storage</string>

    <string name="back_button_label">Go to Previous screen</string>
    <string name="demo_not_available_yet_label">This demo hasn\'t been written yet</string>
    <string name="empty_state_label">Get started by triggering one of the actions below</string>

    <string name="demo_add_media_file_name">Add Media</string>
    <string name="demo_add_media_file_description">Add media file from local source</string>
    <string name="demo_add_image_label">Add image</string>
    <string name="demo_add_video_label">Add video</string>

    <string name="demo_capture_media_file_name">Capture Media</string>
    <string name="demo_capture_media_file_description">Capture media using camera intents</string>
    <string name="demo_capture_image_label">Capture image</string>
    <string name="demo_capture_video_label">Capture video</string>

    <string name="demo_add_file_to_downloads_name">Add File to Downloads</string>
    <string name="demo_add_file_to_downloads_description">Add file to the Downloads folder</string>
    <string name="demo_add_pdf_label">Add PDF</string>
    <string name="demo_add_zip_label">Add ZIP</string>

    <string name="demo_edit_media_file_name">Edit Media</string>
    <string name="demo_edit_media_file_description">Edit media file using MediaStore</string>

    <string name="demo_delete_media_file_name">Delete Media</string>
    <string name="demo_delete_media_file_description">Delete media file using MediaStore</string>

    <string name="demo_list_media_files_name">List Media Files</string>
    <string name="demo_list_media_files_description">Query MediaStore to list indexed files</string>
    <string name="demo_list_media_loading">Loading…</string>
    <string name="demo_list_media_failure">MediaStore couldn\'t return results. Check Logcat</string>
    <string name="demo_list_media_no_files_found">No media files found</string>

    <string name="demo_select_document_file_name">Select Document File</string>
    <string name="demo_select_document_file_description">Read file using Storage Access Framework</string>
    <string name="demo_select_any_document">Select any file</string>
    <string name="demo_select_pdf_document">Select PDF file</string>
    <string name="demo_select_zip_document">Select ZIP file</string>

    <string name="demo_create_document_file_name">Create Document File</string>
    <string name="demo_create_document_file_description">Create file using Storage Access Framework</string>

    <string name="demo_edit_document_file_name">Edit Document File</string>
    <string name="demo_edit_document_file_description">Edit file using Storage Access Framework</string>

    <string name="app_10">SharingShortcuts</string>

    <string name="app_11">StorageClient</string>
    <string name="intro_message_2">
        Using the OPEN_DOCUMENT intent, a client app can access a list of Document Providers
        on the device, and choose a file from any of them.
        \n\nTo demonstrate this, click the button below to open up the Storage Access Framework
        interface, and choose an image on your device.  It will be displayed in this app.
    </string>
    <!-- MainActivity -->
    <string name="send_intent_title">Send message</string>
    <string name="explanation">
        This app demonstrates how to implement Direct Share. Use some other app and share a text.
        For your convenience, you can also use the input below to share the text.
    </string>
    <string name="text_to_share">Text to share</string>
    <string name="hello">Hello!</string>
    <string name="share">Share</string>

    <!-- SendMessageActivity -->
    <string name="sending_message">Sending a message</string>
    <string name="to">To:</string>
    <string name="send">Send</string>
    <string name="body">Body:</string>
    <string name="hint_body">Edit your message</string>
    <string name="message_sent">Sent a message \"%1$s\" to %2$s</string>

    <string name="sample_action">Show Me The Image</string>
</resources>